запросы бронирования проходят тесты